--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,6 @@
 $green: #00dbb1;
 $blue: #a1d9d6;
-$darkGray: #d5d3d4;
+$lightGray: #d5d3d4;
+$darkGray: #a6a8b2;
 $lightWhite: #e4fbf6;
 $dark: #464e4d;
