--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,7 +1,10 @@
+@import './_variables';
 @import './components/calendar';
 
 body {
 	background: #ececec;
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
 }
 
 input, textarea {
@@ -9,5 +12,16 @@ input, textarea {
 		outline: none;
 		padding: 5px 10px;
 		background: none;
+		font-size: 1em;
+		line-height: 1.2em;
 	}
 }
+
+.float-right {
+	float: right;
+}
+
+.float-left {
+	float: left;
+}
+
