--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,9 +24,11 @@
   border: none;
 }
 .calendar-wrapper .calendar {
+  border: 1px solid #d5d3d4;
   position: absolute;
   top: calc(100% + 5px);
   width: 100%;
+  box-shadow: 0px 1px 31px -13px rgba(0, 0, 0, 0.75);
 }
 .calendar-wrapper .calendar .calendar-header {
   background: #00dbb1;
@@ -40,7 +42,7 @@
   color: #e4fbf6;
 }
 .calendar-wrapper .calendar .calendar-header .calendar-btn-chevron {
-  font-size: 25px;
+  font-size: 1em;
   color: #464e4d;
   font-weight: 900;
 }
@@ -50,10 +52,18 @@
 .calendar-wrapper .calendar .calendar-body .calendar-table {
   text-align: center;
   width: 100%;
-  color: #a6a8b2;
+  font-size: 0.9em;
+  font-weight: 600;
 }
 .calendar-wrapper .calendar .calendar-body .calendar-table th, .calendar-wrapper .calendar .calendar-body .calendar-table td {
-  padding: 5px 10px;
+  padding: 15px 10px;
+  color: #d5d3d4;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-btn-day, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-btn-day {
+  color: #d5d3d4;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-btn-day.calendar-current-month, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-btn-day.calendar-current-month {
+  color: #a6a8b2;
 }
 .calendar-wrapper .calendar .calendar-btn {
   display: inline-block;
@@ -75,6 +85,10 @@ body {
   background: #ececec;
   font-family: "Lato", sans-serif;
   font-size: 16px;
+}
+
+a {
+  text-decoration: none;
 }
 
 input.field, textarea.field {
