--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,8 @@
 $green: #00dbb1;
+$lightGreen: #c3fef8;
 $blue: #a1d9d6;
 $lightGray: #d5d3d4;
-$darkGray: #a6a8b2;
+$darkGray: #9e9e9e;
 $lightWhite: #e4fbf6;
 $dark: #464e4d;
+$white: #fff;
