--- a/public/css/app.css
+++ b/public/css/app.css
@@ -76,13 +76,19 @@
 .calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-start, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-start {
   position: relative;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-start:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-start:before {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-start:after, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-start:after {
   content: " ";
   position: absolute;
   left: 50%;
   right: 0px;
   top: 0px;
   bottom: 0px;
+  background: #c3fef8;
+  z-index: 0;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-start.range-in-occupied:after, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-start.range-in-occupied:after {
+  border-top: 4px solid #e53935;
+  border-bottom: 4px solid #e53935;
   background: #c3fef8;
 }
 .calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-end, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-end {
@@ -96,27 +102,113 @@
   top: 0px;
   bottom: 0px;
   background: #c3fef8;
+  z-index: 0;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-end.range-in-occupied:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-end.range-in-occupied:before {
+  border-top: 4px solid #e53935;
+  border-bottom: 4px solid #e53935;
+  background: #c3fef8;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-in-occupied, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-in-occupied {
+  background: #ef9a9a;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-in-occupied .calendar-item, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-in-occupied .calendar-item {
+  color: #e53935;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-in-occupied.range-in, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-in-occupied.range-in {
+  position: relative;
+  background: #c3fef8;
+  z-index: 0;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-in-occupied.range-in .calendar-item, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-in-occupied.range-in .calendar-item {
+  color: #00dbb1;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-in-occupied.range-in:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-in-occupied.range-in:before {
+  content: " ";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  height: 4px;
+  z-index: 1;
+  background: #e53935;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-in-occupied.range-in:after, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-in-occupied.range-in:after {
+  content: " ";
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  height: 4px;
+  z-index: 1;
+  background: #e53935;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-start-occupied, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-start-occupied {
+  position: relative;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-start-occupied:after, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-start-occupied:after {
+  content: " ";
+  position: absolute;
+  left: 50%;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  background: #ef9a9a;
+  z-index: 0;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-start-occupied.range-start:after, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-start-occupied.range-start:after {
+  border-top: 4px solid #e53935;
+  border-bottom: 4px solid #e53935;
+  background: #c3fef8;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-start-occupied.range-in:after, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-start-occupied.range-in:after {
+  border-top: 4px solid #e53935;
+  border-bottom: 4px solid #e53935;
+  background: #c3fef8;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-end-occupied, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-end-occupied {
+  position: relative;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-end-occupied:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-end-occupied:before {
+  content: " ";
+  position: absolute;
+  right: 50%;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  background: #ef9a9a;
+  z-index: 0;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-end-occupied.range-end:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-end-occupied.range-end:before {
+  border-top: 4px solid #e53935;
+  border-bottom: 4px solid #e53935;
+  background: #c3fef8;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper.range-end-occupied.range-in:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper.range-end-occupied.range-in:before {
+  border-top: 4px solid #e53935;
+  border-bottom: 4px solid #e53935;
+  background: #c3fef8;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item {
   width: 40px;
   height: 40px;
   line-height: 40px;
   display: inline-block;
   padding: 5px;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.text-dark, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.text-dark {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item.text-dark, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item.text-dark {
   color: #9e9e9e;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.text-light, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.text-light {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item.text-light, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item.text-light {
   color: #d5d3d4;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.pill, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.pill {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item.pill, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item.pill {
   border-radius: 50%;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.active, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.active {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item.active, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item.active {
   position: relative;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.active:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.active:before {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item.active:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item.active:before {
   content: " ";
   position: absolute;
   top: 0px;
@@ -125,12 +217,21 @@
   right: 0px;
   border: 4px solid #00dbb1;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.active.pill:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.active.pill:before {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item.active.pill:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item.active.pill:before {
   border-radius: 50%;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.range-point, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.range-point {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item.range-point-occupied, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item.range-point-occupied {
+  background: #e53935;
+  color: #fff !important;
+  z-index: 1;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item.range-point-occupied.active:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item.range-point-occupied.active:before {
+  border: 4px solid #e53935;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item-wrapper .calendar-item.range-point, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item-wrapper .calendar-item.range-point {
   background: #00dbb1;
-  color: #fff;
+  color: #fff !important;
+  z-index: 1;
 }
 .calendar-wrapper .calendar .calendar-btn {
   display: inline-block;
