--- a/src/sass/components/calendar.scss
+++ b/src/sass/components/calendar.scss
@@ -83,13 +83,13 @@
 
 							.calendar-item {
 								color: $green;
-							}					
+							}				
 						}
 
 						&.range-start {
 							position: relative;	
 
-							&:before {
+							&:after {
 								content: ' ';
 								position: absolute;
 								left: 50%;
@@ -97,7 +97,16 @@
 								top: 0px;
 								bottom: 0px;
 								background: $lightGreen;
-							}					
+								z-index: 0;
+							}	
+
+							&.range-in-occupied {															
+								&:after {
+									border-top: 4px solid $red;
+									border-bottom: 4px solid $red;
+									background: $lightGreen;
+								}
+							}	
 						}
 
 						&.range-end {
@@ -111,50 +120,175 @@
 								top: 0px;
 								bottom: 0px;
 								background: $lightGreen;
+								z-index: 0;
+							}	
+
+							&.range-in-occupied {								
+								&:before {
+									border-top: 4px solid $red;
+									border-bottom: 4px solid $red;
+									background: $lightGreen;
+								}
 							}					
 						}
-					}
 
-					.calendar-item {
-						width: 40px;
-						height: 40px;
-						line-height: 40px;
-						display: inline-block;
-						padding: 5px;
+						&.range-in-occupied {
+							background: $lightRed;
 
-						&.text-dark {
-							color: $darkGray;	
+							.calendar-item {
+								color: $red;
+							}		
+
+							&.range-in {
+								position: relative;	
+								background: $lightGreen;
+								z-index: 0;
+
+								.calendar-item {
+									color: $green;
+								}	
+
+								&:before {									
+									content: ' ';
+									position: absolute;
+									top: 0px;
+									left: 0px;
+									right: 0px;
+									height: 4px;
+									z-index: 1;
+									background: $red;
+								}	
+
+								&:after {									
+									content: ' ';
+									position: absolute;
+									bottom: 0px;
+									left: 0px;
+									right: 0px;
+									height: 4px;
+									z-index: 1;
+									background: $red;
+								}			
+							}					
 						}
 
-						&.text-light {
-							color: $lightGray;	
+						&.range-start-occupied {
+							position: relative;	
+
+							&:after {
+								content: ' ';
+								position: absolute;
+								left: 50%;
+								right: 0px;
+								top: 0px;
+								bottom: 0px;
+								background: $lightRed;
+								z-index: 0;
+							}	
+
+							&.range-start {
+								&:after {
+									border-top: 4px solid $red;
+									border-bottom: 4px solid $red;
+									background: $lightGreen;
+								}
+							}	
+
+							&.range-in {								
+								&:after {
+									border-top: 4px solid $red;
+									border-bottom: 4px solid $red;
+									background: $lightGreen;
+								}
+							}						
 						}
 
-						&.pill {
-							border-radius: 50%;
-						}
-
-						&.active {
-							position:relative;
+						&.range-end-occupied {
+							
+							position: relative;	
 
 							&:before {
 								content: ' ';
 								position: absolute;
+								right: 50%;
+								left: 0px;
 								top: 0px;
 								bottom: 0px;
-								left: 0px;
-								right: 0px;
-								border: 4px solid $green;
-							}
-							
-							&.pill:before {		
-								border-radius: 50%;
+								background: $lightRed;
+								z-index: 0;
+							}	
+
+							&.range-end {
+								&:before {
+									border-top: 4px solid $red;
+									border-bottom: 4px solid $red;
+									background: $lightGreen;
+								}
+							}	
+
+							&.range-in {								
+								&:before {
+									border-top: 4px solid $red;
+									border-bottom: 4px solid $red;
+									background: $lightGreen;
+								}
 							}
 						}
 
-						&.range-point {
-							background: $green;
-							color: $white;
+						.calendar-item {
+							width: 40px;
+							height: 40px;
+							line-height: 40px;
+							display: inline-block;
+							padding: 5px;
+
+							&.text-dark {
+								color: $darkGray;	
+							}
+
+							&.text-light {
+								color: $lightGray;	
+							}
+
+							&.pill {
+								border-radius: 50%;
+							}
+
+							&.active {
+								position:relative;
+
+								&:before {
+									content: ' ';
+									position: absolute;
+									top: 0px;
+									bottom: 0px;
+									left: 0px;
+									right: 0px;
+									border: 4px solid $green;
+								}
+								
+								&.pill:before {		
+									border-radius: 50%;
+								}
+							}
+
+							&.range-point-occupied {
+								background: $red;
+								color: $white!important;
+								z-index: 1;
+
+								&.active {
+									&:before {
+										border: 4px solid $red;
+									}
+								}
+							}
+
+							&.range-point {
+								background: $green;
+								color: $white!important;
+								z-index: 1;
+							}
 						}
 					}
 				}
@@ -176,9 +310,6 @@
 				box-shadow .15s ease-in-out;
 			border-radius: 4px;
 			padding: 3px 7px;
-			// background: none;
-			// border: none;
-			// text-transform: none;
 
 			&:focus {
 				border-color: $green;
