--- a/src/sass/components/calendar.scss
+++ b/src/sass/components/calendar.scss
@@ -132,46 +132,6 @@
 							}					
 						}
 
-						&.range-in-occupied {
-							background: $lightRed;
-
-							.calendar-item {
-								color: $red;
-							}		
-
-							&.range-in {
-								position: relative;	
-								background: $lightGreen;
-								z-index: 0;
-
-								.calendar-item {
-									color: $green;
-								}	
-
-								&:before {									
-									content: ' ';
-									position: absolute;
-									top: 0px;
-									left: 0px;
-									right: 0px;
-									height: 4px;
-									z-index: 1;
-									background: $red;
-								}	
-
-								&:after {									
-									content: ' ';
-									position: absolute;
-									bottom: 0px;
-									left: 0px;
-									right: 0px;
-									height: 4px;
-									z-index: 1;
-									background: $red;
-								}			
-							}					
-						}
-
 						&.range-start-occupied {
 							position: relative;	
 
@@ -235,60 +195,103 @@
 							}
 						}
 
-						.calendar-item {
-							width: 40px;
-							height: 40px;
-							line-height: 40px;
-							display: inline-block;
-							padding: 5px;
+						&.range-in-occupied {
+							background: $lightRed;
 
-							&.text-dark {
-								color: $darkGray;	
-							}
+							.calendar-item {
+								color: $red;
+							}		
 
-							&.text-light {
-								color: $lightGray;	
-							}
+							&.range-in {
+								position: relative;	
+								background: $lightGreen;
+								z-index: 0;
 
-							&.pill {
-								border-radius: 50%;
-							}
+								.calendar-item {
+									color: $green;
+								}	
 
-							&.active {
-								position:relative;
-
-								&:before {
+								&:before {									
 									content: ' ';
 									position: absolute;
 									top: 0px;
+									left: 0px;
+									right: 0px;
+									height: 4px;
+									z-index: 1;
+									background: $red;
+									border: none !important;
+								}	
+
+								&:after {									
+									content: ' ';
+									position: absolute;
+									top: calc(100% - 4px);
 									bottom: 0px;
 									left: 0px;
 									right: 0px;
-									border: 4px solid $green;
-								}
-								
-								&.pill:before {		
-									border-radius: 50%;
+									height: 4px;
+									z-index: 1;
+									background: $red;
+									border: none !important;
+								}			
+							}					
+						}
+					}
+
+					.calendar-item {
+						width: 40px;
+						height: 40px;
+						line-height: 40px;
+						display: inline-block;
+						padding: 5px;
+
+						&.text-dark {
+							color: $darkGray;	
+						}
+
+						&.text-light {
+							color: $lightGray;	
+						}
+
+						&.pill {
+							border-radius: 50%;
+						}
+
+						&.active {
+							position:relative;
+
+							&:before {
+								content: ' ';
+								position: absolute;
+								top: 0px;
+								bottom: 0px;
+								left: 0px;
+								right: 0px;
+								border: 4px solid $green;
+							}
+							
+							&.pill:before {		
+								border-radius: 50%;
+							}
+						}
+
+						&.range-point-occupied {
+							background: $red;
+							color: $white!important;
+							z-index: 1;
+
+							&.active {
+								&:before {
+									border: 4px solid $red;
 								}
 							}
+						}
 
-							&.range-point-occupied {
-								background: $red;
-								color: $white!important;
-								z-index: 1;
-
-								&.active {
-									&:before {
-										border: 4px solid $red;
-									}
-								}
-							}
-
-							&.range-point {
-								background: $green;
-								color: $white!important;
-								z-index: 1;
-							}
+						&.range-point {
+							background: $green;
+							color: $white!important;
+							z-index: 1;
 						}
 					}
 				}
