--- a/src/sass/components/calendar.scss
+++ b/src/sass/components/calendar.scss
@@ -1,15 +1,26 @@
 .calendar-wrapper {
+
+	&.show {
+		.calendar {
+			display: block;
+		}
+	}
+
 	position: relative;
 	display: inline-block;
 
 	.calendar-fields {
 		padding: 5px 10px;
 		border: 1px solid $lightGray;
-		display: inline-block;
+		// display: inline-block;
+		margin-bottom: 5px;
+		display: flex;
+		align-items: center;
 
 		.calendar-field {
 			border: none;
 			border-radius: 4px;
+			width: calc(50% - 30px);
 		}
 
 		.calendar-field,
@@ -32,6 +43,7 @@
 	}
 
 	.calendar {
+		display: none;
 		border: 1px solid $lightGray;
 		position: absolute;
 		top: calc(100% + 5px);
@@ -46,17 +58,40 @@
 			font-size: 1.6em;
 			text-align: center;
 			padding: 20px 30px;
-			display: block;
+			display: flex;
+			justify-content: space-between;
 
 			.calendar-btn {
 				color: $lightWhite;
 			}
 
 			.calendar-btn-chevron {
+				position: relative;
 				font-size: 1em;
 				color: $dark;
 				font-weight: 900;
 			}
+
+			.calendar-btn-chevron:before {
+				content: ' ';
+				position: absolute;
+				display: inline-block;
+				border-right: 4px solid $dark;
+				border-bottom: 4px solid $dark;
+				width: 10px; height: 10px;
+				top: 50%;
+				-ms-transform: translateY(-50%);
+				transform: translateY(-50%);
+			}
+
+			.calendar-btn-chevron-left:before {
+				transform: rotate(-225deg);
+			}
+
+			.calendar-btn-chevron-right:before {
+				transform: rotate(-45deg);
+			}
+
 		}
 
 		.calendar-body {
@@ -240,7 +275,7 @@
 					}
 
 					.calendar-item {
-						width: 40px;
+						width: calc(100% - 10px);
 						height: 40px;
 						line-height: 40px;
 						display: inline-block;
@@ -256,6 +291,11 @@
 
 						&.pill {
 							border-radius: 50%;
+							width: 40px;
+						}
+							
+						&.pill:before {		
+							border-radius: 50%;
 						}
 
 						&.active {
@@ -270,28 +310,33 @@
 								right: 0px;
 								border: 4px solid $green;
 							}
-							
-							&.pill:before {		
-								border-radius: 50%;
-							}
+						}
+
+						&.range-point {
+							position: relative;
+							background: $green;
+							color: $white!important;
+							z-index: 1;
 						}
 
 						&.range-point-occupied {
+							position: relative;
 							background: $red;
 							color: $white!important;
 							z-index: 1;
 
-							&.active {
+							&.range-point {
+								background: $green;
 								&:before {
+									content: ' ';
+									position: absolute;
+									top: 0px;
+									bottom: 0px;
+									left: 0px;
+									right: 0px;
 									border: 4px solid $red;
 								}
 							}
-						}
-
-						&.range-point {
-							background: $green;
-							color: $white!important;
-							z-index: 1;
 						}
 					}
 				}
@@ -318,9 +363,6 @@
 				border-color: $green;
     			box-shadow: 0 0 0 0.25rem rgb(7 176 144 / 50%);
 			}
-		}
-
-		.calendar-btn-link {
 		}
 	}
 }
