--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,19 +2,25 @@
   position: relative;
   display: inline-block;
 }
+.calendar-wrapper.show .calendar {
+  display: block;
+}
 .calendar-wrapper .calendar-fields {
   padding: 5px 10px;
   border: 1px solid #d5d3d4;
-  display: inline-block;
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
 }
 .calendar-wrapper .calendar-fields .calendar-field {
   border: none;
   border-radius: 4px;
+  width: calc(50% - 30px);
 }
 .calendar-wrapper .calendar-fields .calendar-field,
 .calendar-wrapper .calendar-fields .calendar-field-arrow {
   display: inline-block;
-  color: #9e9e9e;
+  color: #575757;
   font-weight: 500;
   font-size: 1.4em;
 }
@@ -27,6 +33,7 @@
   border: none;
 }
 .calendar-wrapper .calendar {
+  display: none;
   border: 1px solid #d5d3d4;
   position: absolute;
   top: calc(100% + 5px);
@@ -39,15 +46,34 @@
   font-size: 1.6em;
   text-align: center;
   padding: 20px 30px;
-  display: block;
+  display: flex;
+  justify-content: space-between;
 }
 .calendar-wrapper .calendar .calendar-header .calendar-btn {
   color: #e4fbf6;
 }
 .calendar-wrapper .calendar .calendar-header .calendar-btn-chevron {
+  position: relative;
   font-size: 1em;
   color: #464e4d;
   font-weight: 900;
+}
+.calendar-wrapper .calendar .calendar-header .calendar-btn-chevron:before {
+  content: " ";
+  position: absolute;
+  display: inline-block;
+  border-right: 4px solid #464e4d;
+  border-bottom: 4px solid #464e4d;
+  width: 10px;
+  height: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.calendar-wrapper .calendar .calendar-header .calendar-btn-chevron-left:before {
+  transform: rotate(-225deg);
+}
+.calendar-wrapper .calendar .calendar-header .calendar-btn-chevron-right:before {
+  transform: rotate(-45deg);
 }
 .calendar-wrapper .calendar .calendar-body {
   background: #fff;
@@ -193,19 +219,23 @@
   border: none !important;
 }
 .calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item {
-  width: 40px;
+  width: calc(100% - 10px);
   height: 40px;
   line-height: 40px;
   display: inline-block;
   padding: 5px;
 }
 .calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.text-dark, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.text-dark {
-  color: #9e9e9e;
+  color: #575757;
 }
 .calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.text-light, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.text-light {
   color: #d5d3d4;
 }
 .calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.pill, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.pill {
+  border-radius: 50%;
+  width: 40px;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.pill:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.pill:before {
   border-radius: 50%;
 }
 .calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.active, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.active {
@@ -220,21 +250,29 @@
   right: 0px;
   border: 4px solid #00dbb1;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.active.pill:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.active.pill:before {
-  border-radius: 50%;
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.range-point, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.range-point {
+  position: relative;
+  background: #00dbb1;
+  color: #fff !important;
+  z-index: 1;
 }
 .calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.range-point-occupied, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.range-point-occupied {
+  position: relative;
   background: #e53935;
   color: #fff !important;
   z-index: 1;
 }
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.range-point-occupied.active:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.range-point-occupied.active:before {
-  border: 4px solid #e53935;
-}
-.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.range-point, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.range-point {
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.range-point-occupied.range-point, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.range-point-occupied.range-point {
   background: #00dbb1;
-  color: #fff !important;
-  z-index: 1;
+}
+.calendar-wrapper .calendar .calendar-body .calendar-table th .calendar-item.range-point-occupied.range-point:before, .calendar-wrapper .calendar .calendar-body .calendar-table td .calendar-item.range-point-occupied.range-point:before {
+  content: " ";
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  border: 4px solid #e53935;
 }
 .calendar-wrapper .calendar .calendar-btn {
   display: inline-block;
@@ -252,10 +290,90 @@
   border-color: #00dbb1;
   box-shadow: 0 0 0 0.25rem rgba(7, 176, 144, 0.5);
 }
+
+.card {
+  display: inline-block;
+  padding: 15px 20px;
+  border: 1px solid #d5d3d4;
+}
+
+.reserve-card {
+  width: 400px;
+}
+.reserve-card h3 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: 25px;
+  font-weight: 700;
+}
+.reserve-card .divider {
+  display: block;
+  border-top: 1px solid #d5d3d4;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.reserve-card .btn {
+  display: block;
+  width: 100%;
+  background: #e53935;
+  text-decoration: none;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  outline: 0;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  border-radius: 4px;
+  padding: 5px 10px;
+  font-size: 1.4em;
+  height: 2em;
+}
+.reserve-card .btn:focus {
+  border-color: #00dbb1;
+  box-shadow: 0 0 0 0.25rem rgba(7, 176, 144, 0.5);
+}
+.reserve-card p {
+  font-size: 1em;
+  line-height: 1em;
+  font-weight: 700;
+}
+
+.stars {
+  cursor: pointer;
+  display: inline-block;
+}
+.stars:hover .star polygon {
+  fill: #327a78 !important;
+}
+.stars .star polygon {
+  fill: url("#grad");
+}
+.stars .star:hover ~ .star polygon {
+  fill: #327a78 !important;
+}
+.stars[data-stars] .star polygon {
+  fill: #d5d3d4;
+}
+.stars[data-stars="1"] .star:nth-child(1) ~ .star polygon {
+  fill: #d5d3d4;
+}
+.stars[data-stars="2"] .star:nth-child(2) ~ .star polygon {
+  fill: #d5d3d4;
+}
+.stars[data-stars="3"] .star:nth-child(3) ~ .star polygon {
+  fill: #d5d3d4;
+}
+.stars[data-stars="4"] .star:nth-child(4) ~ .star polygon {
+  fill: #d5d3d4;
+}
+.stars[data-stars="5"] .star:nth-child(5) ~ .star polygon {
+  fill: #d5d3d4;
+}
+
 body {
   background: #ececec;
   font-family: "Lato", sans-serif;
   font-size: 16px;
+  color: #575757;
 }
 
 a {
@@ -268,6 +386,13 @@ input.field, textarea.field {
   background: none;
   font-size: 1em;
   line-height: 1.2em;
+}
+
+label {
+  font-weight: 700;
+  color: #575757;
+  margin-bottom: 5px;
+  display: block;
 }
 
 .float-right {
