--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,9 +2,10 @@ $green: #00dbb1;
 $lightGreen: #c3fef8;
 $blue: #a1d9d6;
 $lightGray: #d5d3d4;
-$darkGray: #9e9e9e;
+$darkGray: #575757;
 $lightWhite: #e4fbf6;
 $dark: #464e4d;
 $white: #fff;
 $lightRed: #ef9a9a;
 $red: #e53935;
+$star: #327a78;
